@@ -1,3 +1,10 @@
+2009-02-16  Robin Stocker  <robin@nibor.org>
+
+	reviewed by: Philip Withnall <philip@tecnocode.co.uk>
+
+	* src/backend/bacon-video-widget-gst-0.10.c: Remove unused fields of
+	BaconVideoWidgetPrivate (Closes: #571888)
+
 2009-02-12  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-xine.c
